extends Panel

@onready var name_in = $VBoxContainer/HBoxContainer/name_in
@onready var img = $VBoxContainer/race_img/class_img
@onready var strg = $VBoxContainer/race_img/class_img/VBoxContainer/HBoxContainer/strg_in
@onready var dex = $VBoxContainer/race_img/class_img/VBoxContainer/HBoxContainer2/dex_in
@onready var intel = $VBoxContainer/race_img/class_img/VBoxContainer/HBoxContainer3/intel_in
@onready var con = $VBoxContainer/race_img/class_img/VBoxContainer/HBoxContainer4/con_in
@onready var spd = $VBoxContainer/race_img/class_img/VBoxContainer/HBoxContainer5/spd_in
@onready var coord = $VBoxContainer/race_img/class_img/VBoxContainer/HBoxContainer6/coord_in
@onready var skill_1 = $VBoxContainer/SKills_ins/skill_in1
@onready var skill_2 = $VBoxContainer/SKills_ins/skill_in2
@onready var skill_3 = $VBoxContainer/SKills_ins/skill_in3
@onready var skill_4 = $VBoxContainer/SKills_ins/skill_in4
@onready var health = $VBoxContainer/bars/health/health_L
@onready var resc = $VBoxContainer/bars/resc/resc_L
@onready var bio = $VBoxContainer/HBoxContainer6/bio





# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	
	
	pass # Replace with function body.



# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
